# term-weaver

./: .copier-answers.yml  .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.public.mk  mkdocs.yml  pyproject.toml  source
docs/: DESIGN.md  README.md  _navbar.md  about.md  design.yaml  index.html  index.md
docs/schema/: cam_expanded_enums.yaml
examples/: README.md
input/: cam_imports_model.yaml  common_access_model.yaml
output/: EnumAvailabilityStatus.yaml  EnumConsanguinityAssertion.yaml  EnumDataCategory.yaml  EnumDataUsePermission.yaml  EnumEDAMFormats.yaml  EnumParticipantLifespanStage.yaml  EnumRace.yaml  EnumSex.yaml  EnumSpatialQualifiers.yaml  EnumStudyDesign.yaml  EnumVitalStatus.yaml
scripts/: expand_enums.py
src/cam-expanded-enums/: EnumAvailabilityStatus.yaml  EnumClinicalDataSourceType.yaml  EnumConsanguinityAssertion.yaml  EnumDataCategory.yaml  EnumDataUseModifier.yaml  EnumDataUsePermission.yaml  EnumEDAMDataTypes.yaml  EnumEDAMFormats.yaml  EnumEthnicity.yaml  EnumFamilyType.yaml  EnumFileHashType.yaml  EnumLaterality.yaml  EnumNull.yaml  EnumParticipantLifespanStage.yaml  EnumProgram.yaml  EnumRace.yaml  EnumResearchDomain.yaml  EnumSampleCollectionMethod.yaml  EnumSex.yaml  EnumSite.yaml  EnumStudyDesign.yaml  EnumSubjectType.yaml  EnumVitalStatus.yaml
src/cam_expanded_enums/: __init__.py
src/cam_expanded_enums/datamodel/: __init__.py  cam_expanded_enums.py  cam_expanded_enums_pydantic.py
src/cam_expanded_enums/schema/: EnumAssertionProvenance.yaml  EnumClinicalDataSourceType.yaml  EnumDataUseModifier.yaml  EnumEDAMDataTypes.yaml  EnumEthnicity.yaml  EnumFamilyType.yaml  EnumFileHashType.yaml  EnumLaterality.yaml  EnumNull.yaml  EnumProgram.yaml  EnumResearchDomain.yaml  EnumSampleCollectionMethod.yaml  EnumSite.yaml  EnumSpatialQualifiers.yaml  EnumSubjectType.yaml  cam-expanded-enums.yaml
src/tweaver/: __init__.py  _version.py  weaver.py
tests/: __init__.py
tests/data/: README.md
