[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "term-weaver"
description = "Enumeration Materialization"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "requests",
    "linkml",
    "PyYAML",
    "jinja2"]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "rich",
    "pytest",
    "rich_argparse",
]

[tool.setuptools_scm]
version_file = "src/tweaver/_version.py"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[project.scripts]
tweaver = "tweaver.weaver:exec"
