[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "cam_expanded_enums"
description = "This project is a LinkML model containing expanded enumerations from the Common Access Model."
authors = [
  {name = "Yelena Cox", email = "yelena.cox@vumc.org"},
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]

dependencies = [
  "linkml-runtime >=1.9.4",
  "requests",
  "linkml",
  "PyYAML",
  "jinja2",
  "search-dragon@git+https://github.com/NIH-NCPI/search-dragon.git@yc/fd-3693"
]

[project.optional-dependencies]
dev = [
    "rich",
    "pytest",
    "rich_argparse",
]


[dependency-groups]
dev = [
    "linkml>=1.9.3",
    "mkdocs-material>=8.2.8",
    "mkdocs-mermaid2-plugin>=1.1.1",
    "mkdocs-pymdownx-material-extras>=2.5.6",
    "jupyter>=1.0.0",
    "mknotebooks>= 0.8.0",
]

# See https://hatch.pypa.io/latest/config/build/#file-selection for how to
# explicitly include files other than default into the build distributions.

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.metadata]
allow-direct-references = true

# Ref.: https://github.com/ninoseki/uv-dynamic-versioning/
[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
fallback-version = "0.0.0"

# Ref.: https://docs.pytest.org/en/stable/reference/reference.html#configuration-options
[tool.pytest.ini_options]
testpaths = ["tests"]

# https://docs.astral.sh/ruff/configuration/
[tool.ruff]
exclude = [
    "src/cam_expanded_enums/_version.py",
]
# Set oldest supported Python version
target-version = "py310"

# Ref.: https://github.com/codespell-project/codespell
[tool.codespell]
skip = [
  "LICENSE",
  "pyproject.toml",
  "uv.lock",
  "project/*",
  "src/cam_expanded_enums/datamodel/cam_expanded_enums_pydantic.py",
  "src/cam_expanded_enums/datamodel/cam_expanded_enums.py",
]

# Reminder: words have to be lowercased for the ignore-words-list
ignore-words-list = "linke"
quiet-level = 3

# Ref.: https://github.com/crate-ci/typos (spell checker)
[tool.typos.default.extend-words]
linke = "linke"

[tool.typos.files]
extend-exclude = [
  "LICENSE",
  "uv.lock",
  "pyproject.toml",
  "project/*",
  "src/cam_expanded_enums/datamodel/cam_expanded_enums_pydantic.py",
  "src/cam_expanded_enums/datamodel/cam_expanded_enums.py",
]

[tool.setuptools_scm]
version_file = "src/tweaver/_version.py"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[project.scripts]
tweaver = "tweaver.weaver:exec"
